--- a/css/style.css
+++ b/css/style.css
@@ -92,16 +92,39 @@ body{
 	color:#FFF;
 }
 
+.sinLogin {
+	float:right;
+	height: 70px;
+	width:450px;
+	margin-top: 7px;
+	color: #666;
+	background-image: url(../img/flecha-login.png);
+	background-repeat: no-repeat;
+	background-position: 280px 0px;	
+}
+
+.ingresarConFacebook {
+	float: left;
+	height: 70px;
+	line-height: 70px;
+	margin-left: 15px;
+	margin-right: 20px;
+	width: 500px;
+	overflow: hidden;	
+}
+
+
 .boton-login {
 	float: left;
 	width: 89px;
-	height: 35px;
+	height: 37px;
 	background-image: url(../img/btn-login.png);
 	background-repeat: no-repeat;
 	text-align: center;
-	color: #FFF;
-	padding-top: 4px;
+	color: white;
+	padding-top: 0px;
 	z-index: 100;
+	background-position: 0px -4px;
 }
 
 a:hover .boton-login {
@@ -119,9 +142,10 @@ a:hover .boton-conocenos {
 	background-image: url(../img/btn-back-blanco.png);
 	background-repeat: no-repeat;
 	text-align: center;
-	color: #000;
+	color: #fff;
 	padding-top: 4px;
 	margin-right: 40px;
+	font-family: KlavikaMedium;
 }
 
 
@@ -342,9 +366,9 @@ a:hover .boton-conocenos {
 
 .fb-like{
 	float: right;
-	width: 150px;
+	width: 125px;
 	height: 35px;
-	margin-right: 50px;
+	margin-right: 0px;
 }
 
 .fb-comments {
@@ -456,16 +480,16 @@ a:hover .boton-conocenos {
 
 .footer-todas-leyes {
 	float: left;
-	width: 100%;
+	width: 904px;
 	height: 65px;
 	margin-left: 40px;
-	margin-right: 30px;
+	margin-right: 40px;
 	margin-top: 20px;
 }
 
 .footer-todas-leyes h3{
 	float: left;
-	width: 201px;
+	width: 192px;
 	height: 24px;
 	text-align: left;
 	color: #fff;
